--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,10 @@
       <artifactId>junit</artifactId>
       <version>4.13.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>4.6.1</version>
+    </dependency>
   </dependencies>
 </project>
